--- a/include/include.vcxitems.filters
+++ b/include/include.vcxitems.filters
@@ -1,22 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="$(MSBuildThisFileDirectory)debug.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)taz\debug.h">
       <Filter>taz</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)environment_utility.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)taz\environment_utility.h">
       <Filter>taz</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)formatters.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)taz\formatters.h">
       <Filter>taz</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)resource_loader.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)taz\resource_loader.h">
       <Filter>taz</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)string_utility.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)taz\string_utility.h">
       <Filter>taz</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)window_enumeration.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)taz\window_enumeration.h">
       <Filter>taz</Filter>
     </ClInclude>
   </ItemGroup>
